welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Short)Int
match expected type ?
while(2*cb=co+1){
       ^RunHalf:6: error: value update is not a member of Boolean
if (estSurOrange()=true)
    ^RunHalf:8: error: value update is not a member of Boolean
if (estSurBiscuit()=true)
    ^